--- a/home.html
+++ b/home.html
@@ -9,20 +9,37 @@
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
 	<title>glowspruce — website</title>
 </head>
 <body>
-    <div class="layout">
+    <div class="header-layout">
         <div class="content">
             <div id="emoji"></div>
             <div id="title">
-                <b>glowspruce</b>
+                <p>glowspruce</p>
             </div>
         </div>
-		<!--<div id="downloads"><div id="container"></div></div>-->
     </div>
-	<br>
+	<div id="downloads"><h1>Downloads</h1>
+		<div class="container">
+			<div id="link"><p id="link-title">Shard of Inconcrete</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+			<div id="link"><p id="link-title">Tellurion</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+			<div id="link"><p id="link-title">Brewskids</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+			<div id="link"><p id="link-title">Oceanwork (Unity Remake)</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+			<div id="link"><p id="link-title">Veresk</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+			<div id="link"><p id="link-title">Blank</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+			<div id="link"><p id="link-title">Blank</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+			<div id="link"><p id="link-title">Blank</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+			<div id="link"><p id="link-title">Blank</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+			<div id="link"><p id="link-title">Blank</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+			<div id="link"><p id="link-title">Blank</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+			<div id="link"><p id="link-title">Blank</p><img src="https://placehold.co/256x400" alt=""><a href="#">Download Link</a><br><a href="#">Learn more</a></div>
+		</div>
+	</div>
 	<iframe src="https://terminator.aeza.net" frameborder="0" style="overflow: hidden; height: 100vh; width: 100%"></iframe>
     <footer>
 		<ul>
